crates/templates/tests/snapshots/parse_arguments_test__impl.snap
---
source: crates/templates/tests/parse_arguments_test.rs
description: Parse commands with short and long only options
expression: output
---
parse_arguments() {
  while [[ $# -gt 0 ]]; do
    case "${1:-}" in
      -h|--help)
        usage
        exit
        ;;
      *)
        break
        ;;
    esac
  done
  action="${1:-}"

  case $action in
    bar)
        action="bar"
        input=("${input[@]:1}")
        ;;
    baz)
        action="baz"
        input=("${input[@]:1}")
        ;;
    foo)
        action="foo"
        input=("${input[@]:1}")
        ;;
    -h|--help)
      usage
      exit
      ;;
    "")
      ;;
    *)
      printf "Invalid command: %s\n" "$action" >&2
      exit 1
      ;;
  esac
}

