crates/templates/tests/snapshots/parse_arguments_test__render-14.snap
---
source: crates/templates/tests/parse_arguments_test.rs
description: Parse arguments with a root command
expression: output
---
parse_arguments() {
  while [[ $# -gt 0 ]]; do
    case "${1:-}" in
      -v|--version)
        version
        exit
        ;;
      -h|--help)
        usage
        exit
        ;;
      *)
        break
        ;;
    esac
  done
  action="${1:-}"

  case $action in
    -h|--help)
      usage
      exit
      ;;
    "")
      action="root"
      ;;
    *)
      action="root"
      ;;
  esac
}
