crates/templates/tests/snapshots/parse_arguments_test__render-6.snap
---
source: crates/templates/tests/parse_arguments_test.rs
description: Parse commands without a required global option and a default value
expression: output
---
parse_arguments() {
  while [[ $# -gt 0 ]]; do
    case "${1:-}" in
      -h|--help)
        usage
        exit
        ;;
      *)
        break
        ;;
    esac
  done
  action="${1:-}"

  case $action in
    bar)
      action="bar"
      rargs_input=("${rargs_input[@]:1}")
      ;;
    baz)
      action="baz"
      rargs_input=("${rargs_input[@]:1}")
      ;;
    foo)
      action="foo"
      rargs_input=("${rargs_input[@]:1}")
      ;;
    -h|--help)
      usage
      exit
      ;;
    "")
      action="foo"
      ;;
    *)
      action="foo"
      ;;
  esac
}
